--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>Match Maker</title>
-  <!-- Link CSS -->
+  <link rel="stylesheet" type="text/css" href="./css/memo.css">
 </head>
 <body>
-  <!-- Create the header -->
+  <header>Memory Maker</header>
+  <div class="box" id="flipper" ontouchstart="this.classList.toggle('hover');">
+  	  <div class="one"></div>
+  	  <div class="one"></div>
+  	  <div class="one"></div>
+  	  <div class="one"></div>
+	  <div class="one"></div>
+  	  <div class="one"></div>
+  	  <div class="one"></div>
+  	  <div class="one"></div>
 
+
+  	  <div class="two"></div>
+  	  <div class="two"></div>
+	  <div class="two"></div>
+	  <div class="two"></div>
+  </div>
   <!-- Wrapper -->
-
-  <!-- Link JS -->
+  <script type="text/javascript" src="./js/memo.js"></script>
 </body>
 </html>
