--- a/index.html
+++ b/index.html
@@ -7,21 +7,17 @@
 </head>
 <body>
   <header>Memory Maker</header>
-  <div class="box" id="flipper" ontouchstart="this.classList.toggle('hover');">
-  	  <div class="one"></div>
-  	  <div class="one"></div>
-  	  <div class="one"></div>
-  	  <div class="one"></div>
-	  <div class="one"></div>
-  	  <div class="one"></div>
-  	  <div class="one"></div>
-  	  <div class="one"></div>
-
-
-  	  <div class="two"></div>
-  	  <div class="two"></div>
-	  <div class="two"></div>
-	  <div class="two"></div>
+  <div id="first">
+  	  <div class="one" id="a" onclick="flip(o)"></div>
+  	  <div class="one" id="b" onclick="flip(o)"></div>
+  	  <div class="one" id="c" onclick="flip(o)"></div>
+  	  <div class="one" id="d" onclick="flip(o)"></div>
+  </div>
+  <div id="second">	
+  	  <div class="one" id="e" onclick="flip(o)"></div>
+  	  <div class="one" id="f" onclick="flip(o)"></div>
+	  <div class="one" id="g" onclick="flip(o)"></div>
+	  <div class="one" id="h" onclick="flip(o)"></div>  
   </div>
   <!-- Wrapper -->
   <script type="text/javascript" src="./js/memo.js"></script>
