--- a/index.html
+++ b/index.html
@@ -9,15 +9,31 @@
   <header>Memory Maker</header>
   <div id="first">
   	  <div class="one" id="a" onclick="flip(o)"></div>
+	    <div class="front"></div>
+            <div class="back"></div>
   	  <div class="one" id="b" onclick="flip(o)"></div>
+	    <div class="front"></div>
+            <div class="back"></div>
   	  <div class="one" id="c" onclick="flip(o)"></div>
+	    <div class="front"></div>
+	    <div class="back"></div>
   	  <div class="one" id="d" onclick="flip(o)"></div>
+	    <div class="front"></div>
+            <div class="back"></div>
   </div>
   <div id="second">	
   	  <div class="one" id="e" onclick="flip(o)"></div>
+	    <div class="front"></div>
+            <div class="back"></div>
   	  <div class="one" id="f" onclick="flip(o)"></div>
+	    <div class="front"></div>
+            <div class="back"></div>
 	  <div class="one" id="g" onclick="flip(o)"></div>
-	  <div class="one" id="h" onclick="flip(o)"></div>  
+	    <div class="front"></div>
+            <div class="back"></div>
+	  <div class="one" id="h" onclick="flip(o)"></div>
+	    <div class="front"></div>
+            <div class="back"></div>
   </div>
   <!-- Wrapper -->
   <script type="text/javascript" src="./js/memo.js"></script>
