--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>Memory Maker</header>
-  <div id="first">
+  <div class="first">
   	  <div class="one" id="a" onclick="flip(this.id)"></div>
 	    <div class="front"></div>
             <div class="back"></div>
@@ -21,7 +21,7 @@
 	    <div class="front"></div>
             <div class="back"></div>
   </div>
-  <div id="second">	
+  <div class="first">	
   	  <div class="one" id="e" onclick="flip(this.id)"></div>
 	    <div class="front"></div>
             <div class="back"></div>
