everything should be good

--- a/index.html
+++ b/index.html
@@ -8,58 +8,41 @@
 <body>
   <header>Memory Maker</header>
   <div class="first">
-      <div class="one" id="a" onclick="flip(this.id)"></div>
+      <div class="one" id="a" onclick="flip(this.id)">
       <div class="front"></div>
-            <div class="back"></div>
-      <div class="one" id="b" onclick="flip(this.id)"></div>
+        <div class="back"></div>
+      </div>
+      <div class="one" id="b" onclick="flip(this.id)">
       <div class="front"></div>
-            <div class="back"></div>
-      <div class="one" id="c" onclick="flip(this.id)"></div>
+        <div class="back"></div>
+      </div>
+      <div class="one" id="c" onclick="flip(this.id)">
       <div class="front"></div>
       <div class="back"></div>
-      <div class="one" id="d" onclick="flip(this.id)"></div>
-      <div class="front"></div>
-            <div class="back"></div>
+    </div>
+      <div class="one" id="d" onclick="flip(this.id)">
+        <div class="front"></div>
+        <div class="back"></div>
+      </div>
+
   </div>
   <div class="first"> 
-      <div class="one" id="e" onclick="flip(this.id)"></div>
+      <div class="one" id="e" onclick="flip(this.id)">
       <div class="front"></div>
-            <div class="back"></div>
-      <div class="one" id="f" onclick="flip(this.id)"></div>
+        <div class="back"></div>
+      </div>
+      <div class="one" id="f" onclick="flip(this.id)">
       <div class="front"></div>
-            <div class="back"></div>
-    <div class="one" id="g" onclick="flip(this.id)"></div>
+        <div class="back"></div>
+      </div>
+    <div class="one" id="g" onclick="flip(this.id)">
       <div class="front"></div>
-            <div class="back"></div>
-    <div class="one" id="h" onclick="flip(this.id)"></div>
+        <div class="back"></div>
+      </div>
+    <div class="one" id="h" onclick="flip(this.id)">
       <div class="front"></div>
-=======
-  	  <div class="one" id="a" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
-  	  <div class="one" id="b" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
-  	  <div class="one" id="c" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-	    <div class="back"></div>
-  	  <div class="one" id="d" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
-  </div>
-  <div class="first">	
-  	  <div class="one" id="e" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
-  	  <div class="one" id="f" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
-	  <div class="one" id="g" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
-	  <div class="one" id="h" onclick="flip(this.id)"></div>
-	    <div class="front"></div>
-            <div class="back"></div>
+        <div class="back"></div>
+      </div>
   </div>
   <!-- Wrapper -->
   <script type="text/javascript" src="./js/memo.js"></script>
