--- a/index.html
+++ b/index.html
@@ -6,41 +6,57 @@
   <link rel="stylesheet" type="text/css" href="./css/memo.css">
 </head>
 <body>
-  <header>Memory Maker</header>
+  <h1>Memory Maker</h1>
   <div class="first">
       <div class="one" id="a" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/yess.png">
+        </div>
         <div class="back"></div>
       </div>
       <div class="one" id="b" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/carot.png">
+        </div>
         <div class="back"></div>
       </div>
       <div class="one" id="c" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/large.gif">
+        </div>
         <div class="back"></div>
     </div>
       <div class="one" id="d" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/carot.png">
+        </div>
         <div class="back"></div>
       </div>
 
   </div>
   <div class="first"> 
       <div class="one" id="e" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/yess.png">
+        </div>
         <div class="back"></div>
       </div>
       <div class="one" id="f" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/large.png">
+        </div>
         <div class="back"></div>
       </div>
     <div class="one" id="g" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/pandaburd.png">
+        </div>
         <div class="back"></div>
       </div>
     <div class="one" id="h" onclick="flip(this.id)">
-        <div class="front"></div>
+        <div class="front">
+          <img src="../assets/pandaburd.png">
+        </div>
         <div class="back"></div>
       </div>
   </div>
