--- a/index.html
+++ b/index.html
@@ -4,31 +4,32 @@
   <meta charset="UTF-8">
   <title>Match Maker</title>
   <link rel="stylesheet" type="text/css" href="./css/memo.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
 </head>
 <body>
   <h1>Memory Maker</h1>
   <div class="first">
       <div class="one" id="a" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/yess.png">
+          <img class="resize" src="../memories/assets/yess.png" align="middle">
         </div>
         <div class="back"></div>
       </div>
       <div class="one" id="b" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/carot.png">
+          <img class="resize" src="../memories/assets/carot.png" align="middle">
         </div>
         <div class="back"></div>
       </div>
       <div class="one" id="c" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/large.gif">
+          <img class="resize" src="../memories/assets/large.gif" align="middle">
         </div>
         <div class="back"></div>
     </div>
       <div class="one" id="d" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/carot.png">
+          <img class="resize" src="../memories/assets/carot.png" align="middle">
         </div>
         <div class="back"></div>
       </div>
@@ -37,25 +38,25 @@
   <div class="first"> 
       <div class="one" id="e" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/yess.png">
+          <img class="resize" src="../memories/assets/yess.png" align="middle">
         </div>
         <div class="back"></div>
       </div>
       <div class="one" id="f" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/large.png">
+          <img class="resize" src="../memories/assets/large.gif" align="middle">
         </div>
         <div class="back"></div>
       </div>
     <div class="one" id="g" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/pandaburd.png">
+          <img class="resize" src="../memories/assets/pandaburd.png" align="middle">
         </div>
         <div class="back"></div>
       </div>
     <div class="one" id="h" onclick="flip(this.id)">
         <div class="front">
-          <img src="../assets/pandaburd.png">
+          <img class="resize" src="../memories/assets/pandaburd.png" align="middle">
         </div>
         <div class="back"></div>
       </div>
