--- a/index.html
+++ b/index.html
@@ -10,54 +10,38 @@
   <h1>Memory Maker</h1>
   <div class="first">
       <div class="one" id="a" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/card/yess.png" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
       <div class="one" id="b" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/card/carot.png" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
       <div class="one" id="c" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/large.gif" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
     </div>
       <div class="one" id="d" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/card/carot.png" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
 
   </div>
   <div class="first"> 
       <div class="one" id="e" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/card/yess.png" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
       <div class="one" id="f" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/large.gif" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
     <div class="one" id="g" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/card/pandaburd.png" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
     <div class="one" id="h" onclick="flip(this.id)">
-        <div class="front">
-          <img class="resize" src="../memories/assets/card/pandaburd.png" align="middle">
-        </div>
+        <div class="front"></div>
         <div class="back"></div>
       </div>
   </div>
