--- a/index.html
+++ b/index.html
@@ -9,38 +9,38 @@
 <body>
   <h1>Memory Maker</h1>
   <div class="first">
-      <div class="one" id="a" onclick="flip(this.id)">
+      <div class="one" id="a" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
-      <div class="one" id="b" onclick="flip(this.id)">
+      <div class="one" id="b" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
-      <div class="one" id="c" onclick="flip(this.id)">
+      <div class="one" id="c" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
     </div>
-      <div class="one" id="d" onclick="flip(this.id)">
+      <div class="one" id="d" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
 
   </div>
   <div class="first"> 
-      <div class="one" id="e" onclick="flip(this.id)">
+      <div class="one" id="e" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
-      <div class="one" id="f" onclick="flip(this.id)">
+      <div class="one" id="f" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
-    <div class="one" id="g" onclick="flip(this.id)">
+    <div class="one" id="g" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
-    <div class="one" id="h" onclick="flip(this.id)">
+    <div class="one" id="h" onclick="flipDis(this.id)">
         <div class="front"></div>
         <div class="back"></div>
       </div>
